<resources>
    <string name="app_name">InstaClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="enter_the_email_address">Enter the Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="already_account_sign_in">Already Account ? Sign In</string>
    <string name="leave_bio_empty">Leave Bio Empty</string>
    <string name="want_to_describe_your_post">Want to describe your post ?</string>
    <string name="instaclone_2021">InstaClone @ 2021</string>
    <string name="shantanu_gupta">Shantanu Gupta</string>
    <string name="user_name">user name</string>
    <string name="comments">Comments</string>
    <string name="loading">Loading...</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="add_post">Add Post</string>
    <string name="view_all_comments">View All Comments</string>
</resources>