<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_instagram_logo"
        app:tint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/fullName_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_signup_rounded"
        android:padding="10dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        android:hint="@string/first_name"
        android:gravity="center"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/lastName_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_signup_rounded"
        android:layout_below="@id/fullName_edit_text"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:gravity="center"
        android:inputType="text"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastName_edit_text"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_signup_rounded"
        android:hint="@string/email_address"
        android:gravity="center"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_signup_rounded"
        android:padding="10dp"
        android:layout_below="@id/email_edit_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_edit_text"
        android:layout_marginTop="23dp"
        android:background="@drawable/edittext_signup_rounded"/>

    <Button
        android:id="@+id/already_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_signup_rounded"
        android:text="@string/already_account_sign_in"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</RelativeLayout>