<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".SignInActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_instagram_logo"
        app:tint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"/>

    <EditText
        android:id="@+id/email_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_signup_rounded"
        android:padding="10dp"
        android:layout_below="@id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="Email Address"
        android:textColor="#000000"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_signup_rounded"
        android:padding="10dp"
        android:layout_below="@id/email_logIn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/edittext_signup_rounded"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_logIn"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/new_act_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/edittext_signup_rounded"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>