<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_add_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_add_post_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_close_circular_button_symbol"/>

                <ImageView
                    android:src="@drawable/ic_check"
                    android:id="@+id/save_new_post_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Lottie1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:lottie_speed="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/mainKaamView"
        android:layout_below="@id/app_bar_layout_add_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/captureAnim"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="90dp"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/AddPictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Picture"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/captureAnim"
                android:layout_marginLeft="30dp"
                android:background="@drawable/edittext_signup_rounded"
                android:textSize="17sp"
                android:padding="10dp" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/image_post"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_beach"
            android:layout_marginStart="30dp"/>

        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/want_to_describe_your_post"
            android:layout_margin="10dp"
            android:maxLines="8" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/databaseBtn"
                android:text="Debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/upper"
                android:text="@string/instaclone_2021"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_above="@id/lower"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/shantanu_gupta"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
